Starte with category duration